--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/deepseek": "^0.1.12",
+    "@ai-sdk/react": "^1.2.12",
     "@clerk/nextjs": "^6.12.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
