--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/$1"
-      }
-    ]
-  }
-  
+    "rewrites": [{ "source": "/:path*", "destination": "/index.html" }]
+    }
